chore: enhance meta tags and structured data in head section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/audio-waveform.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Speakaloud 🔊</title>
+    <meta name="description" content="Speakaloud is a text-to-speech platform that converts written text into spoken words. Enhance your experience with our innovative voice technology." />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Gabriel Rupert Roy Sufrir" />
+
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebPage",
+            "name": "Speakaloud",
+            "description": "Text-to-Speech Platform",
+            "url": "https://www.speakaloud.vercel.app",
+            "image": "/audio-waveform.svg"
+        }
+    </script>
+
+    <title>Speakaloud: Text-to-Speech App | Convert Text to Voice</title>
   </head>
   <body>
     <div id="root"></div>
