--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <title>Speakaloud: Text-to-Speech App | Convert Text to Voice</title>
   </head>
-  <body>
+  <body class="py-8">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
